--- a/public/html/resume.html
+++ b/public/html/resume.html
@@ -1,13 +1,72 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Resume</title>
-</head>
-<body>
-<p><br><br></p>
-<h1 align="center">Kavya Ganji</h1>
-<p>This is a paragraph.</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>Resume</title>
+  </head>
+  <body>
+      <p><br></p>
+    <h1 style="text-align: center">Kavya Ganji</h1>
+      <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      kavyaganji1901@gmail.com
+    </div>
+    <div class="col-sm" align="right">
+      +91 8885839480
+    </div>
+  </div>
+</div>
+      <p><br></p>
+<div class="container">
+      <div class="row">
+    <div class="col-md-8">
+          <strong>Career Objective : </strong>To secure a challenging position and a responsible career opportunity in a reputable organization to expand my learnings, knowledge, and skills while making a significant contribution to the success of the company.
+          </div>
+          <div class="col-md-4">
+          <img src="C:\Users\Pruthvi Ganji\Desktop\Kavya1-BZ\public\img\download.jpg" align="right">
+          </div>
+    </div>
+      </div>
+      <p><br></p>
+      <table border="1px" align="center" style="width:80%">
+      <tr align="center">
+          <th>SNo</th>
+          <th>Name of Institution</th>
+          <th>Year of Graduation</th>
+          <th>Score</th>
+          </tr>
+          <tr align="center">
+          <td>1</td>
+              <td>CMR College of Engineering & Technology</td>
+              <td>2021</td>
+              <td>8.0</td>
+          </tr>
+          <tr align="center">
+          <td>2</td>
+              <td>Sri Chaitanya Junior College</td>
+              <td>2017</td>
+              <td>9.7</td>
+          </tr>
+          <tr align="center">
+          <td>3</td>
+              <td>CAL Public School</td>
+              <td>2015</td>
+              <td>9.8</td>
+          </tr>
+      </table>
+      <p><br></p>
+      
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
