--- a/public/html/resume.html
+++ b/public/html/resume.html
@@ -30,7 +30,7 @@
           <strong>Career Objective : </strong>To secure a challenging position and a responsible career opportunity in a reputable organization to expand my learnings, knowledge, and skills while making a significant contribution to the success of the company.
           </div>
           <div class="col-md-4">
-          <img src="C:\Users\Pruthvi Ganji\Desktop\Kavya1-BZ\public\img\download.jpg" align="right">
+          <img src="download.jpg" align="right">
           </div>
     </div>
       </div>
