--- a/public/html/resume.html
+++ b/public/html/resume.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="shortcut icon" href="img/resume.ico">
     <title>Resume</title>
   </head>
   <body>
-      <p><br></p>
+      <div class="jumbotron">
     <h1 style="text-align: center">Kavya Ganji</h1>
       <div class="container">
   <div class="row">
@@ -23,46 +23,98 @@
     </div>
   </div>
 </div>
-      <p><br></p>
+      </div>
 <div class="container">
       <div class="row">
     <div class="col-md-8">
           <strong>Career Objective : </strong>To secure a challenging position and a responsible career opportunity in a reputable organization to expand my learnings, knowledge, and skills while making a significant contribution to the success of the company.
           </div>
-          <div class="col-md-4">
-          <img src="download.jpg" align="right">
+          <div class="col-md-4" style="text-align: center">
+          <img src="http://localhost:3000/img/Photo_1.jpg" width="120" height="150">
           </div>
     </div>
       </div>
       <p><br></p>
       <table border="1px" align="center" style="width:80%">
       <tr align="center">
-          <th>SNo</th>
+          <th>Course</th>
+          <th>Board/University</th>
           <th>Name of Institution</th>
           <th>Year of Graduation</th>
           <th>Score</th>
           </tr>
           <tr align="center">
-          <td>1</td>
+          <td>B.Tech(CSE)</td>
+              <td>JNTU,Hyderabad</td>
               <td>CMR College of Engineering & Technology</td>
               <td>2021</td>
               <td>8.0</td>
           </tr>
           <tr align="center">
-          <td>2</td>
+          <td>Intermediate</td>
+              <td>BIE,Telangana</td>
               <td>Sri Chaitanya Junior College</td>
               <td>2017</td>
               <td>9.7</td>
           </tr>
           <tr align="center">
-          <td>3</td>
+          <td>Schooling</td>
+              <td>CBSE</td>
               <td>CAL Public School</td>
               <td>2015</td>
               <td>9.8</td>
           </tr>
       </table>
       <p><br></p>
-      
+      <div class="container">
+      <div class="row">
+      <p><strong>Technical Skills : </strong> C, C++, JAVA, HTML</p>
+      </div>
+          <div class="row">
+          <p><strong>Achievements : </strong>
+              <ul>
+              <li>Attended IoT workshop at CMR College of Engineering & Technology</li>
+              <li>Participated in event management of Start-Up Summit - 2018 at CMRGI</li>
+              </ul>
+              </p>
+          </div>
+      <div class="row">
+          <p><strong>Interpersonal Skills : </strong>
+          <ul>
+          <li>Ability to rapidly build relationship and set up trust</li>
+          <li>Self-motivated</li>
+              <li>Capable of self-learning</li>
+              <li>Highly compatible</li>
+          </ul>
+          </p>
+      </div>
+    <div class="row">
+        <p><strong>Personal Details : </strong>
+        <ul>
+            <li><strong>Father's name : </strong>G.Srinivasa Rao</li>
+            <li><strong>Mother's name : </strong>G.Raja Rajeswari</li>
+            <li><strong>Date of birth : </strong>19<sup>th</sup> January 2000</li>
+            <li><strong>Nationality : </strong>Indian</li>
+            <li><strong>Martial Status : </strong>Single</li>
+            <li><strong>Languages known : </strong>English, Hindi, Telugu</li>
+            <li><strong>Gender : </strong>Female</li>
+        </ul>
+        </p>
+    </div>
+<div class="row">
+    <p><strong>Declaration : </strong>&nbsp;I hereby declare that the above information is true to the best of my knowledge.</p>
+</div>
+<div class="row">
+    <div class="col-md">
+        <br><br>
+    Place : Hyderabad<br>Date : 24/12/2019
+    </div>
+    <div class="col-md" style="text-align: center">
+    <img src="img/Signature_1.jpg" width="125" height="100">
+        <br>(KAVYA)
+    </div>
+      </div>
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
